# tlg-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bench/: slide.rs  slide_common.rs  slide_decode.rs  slide_encode.rs  tlg5_decode.rs  tlg5_encode.rs  tlg6_bit_stream.rs  tlg6_decode.rs  tlg6_encode.rs
benches/: tlg5_decode.rs  tlg6_bit_reader.rs  tlg6_encode.rs
src/: lib.rs  reader.rs  tlg_trait.rs  tlg_type.rs  writer.rs
src/slide/: decode.rs  encode.rs  mod.rs
src/tlg5/: decode.rs  encode.rs  mod.rs
src/tlg5/slide/: compressor.rs  mod.rs
src/tlg6/: bitstream.rs  decode.rs  encode.rs  filter.rs  golomb.rs  mod.rs  predict.rs
tlg/src/tlg5/: decode.rs  encode.rs
