[package]
name = "tlg"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["XuanRikka <xuanrikka@qq.com>"]
repository = "https://github.com/XuanRikka/tlg-rs"
description = "A pure Rust crate for the KrKr2 tlg image format"
keywords = ["image", "tlg", "krkr"]
categories = ["image"]

[lib]
name = "tlg"
crate-type = ["rlib"]

[profile.release]
debug = "full"

[profile.bench]
debug = "full"

[dependencies]
byteorder = "1.5.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"

[features]
__bench = []

[[bench]]
name = "slide-encode"
harness = false
path = "benches/slide_encode.rs"
required-features = ["__bench"]

[[bench]]
name = "slide-decode"
harness = false
path = "benches/slide_decode.rs"
required-features = ["__bench"]

#[[bench]]
#name = "tlg5-encode"
#harness = false
#path = "bench/tlg5_encode.rs"
#
#[[bench]]
#name = "tlg5-decode"
#harness = false
#path = "bench/tlg5_decode.rs"
#
#[[bench]]
#name = "tlg6-encode"
#harness = false
#path = "bench/tlg6_encode.rs"
#
#[[bench]]
#name = "tlg6-decode"
#harness = false
#path = "bench/tlg6_decode.rs"

[[bench]]
name = "tlg6-bit-stream"
harness = false
path = "benches/tlg6_bit_stream.rs"
required-features = ["__bench"]

[[bench]]
name = "tlg6-bit-reader"
harness = false
path = "benches/tlg6_bit_reader.rs"
required-features = ["__bench"]
